--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -27,9 +27,9 @@
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
 @import 'gui/_benefits'; // Benefits
-@import 'gui/_faq-main-screen'; // Faq-main-screen
 @import 'gui/faq3'; // Faq3
 @import 'gui/faq5'; // Faq5
+@import 'gui/FAQ'; // FAQ
 
 // Layout
 // =================================================================
@@ -49,7 +49,6 @@
 
 @import 'plugins/back-to-top'; // Back To Top
 @import 'plugins/bootstrap-components'; // Bootstrap Components
-@import 'plugins/gmap'; // Google Map
 @import 'plugins/masonry'; // Masonry
 @import 'plugins/swiper'; // Swiper
 
