--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -87,7 +87,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 { @include font($size: convertPxToRem(40px))}
 h2 { @include font($size: convertPxToRem(34px))}
 h3 { @include font($size: convertPxToRem(22px))}
-h4 { @include font($size: convertPxToRem(22px))}
+h4 { @include font($size: convertPxToRem(17px))}
+h5 { @include font($size: convertPxToRem(15px))}
 
 ::selection {
     color: $color-white;
@@ -178,6 +179,10 @@ h4 { @include font($size: convertPxToRem(22px))}
 .g-padding-x-40--xs {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+}
+.g-padding-x-20--xs {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
 }
 .g-padding-y-40--xs {
     padding-top: 2.5rem;
