--- a/sass/gui/_FAQ.scss
+++ b/sass/gui/_FAQ.scss
@@ -4,6 +4,10 @@
 .FAQ {
 	&-image-container {
 		width: 100%;
+		margin-bottom:40px;
+		@media (min-width: $screen-sm-min) {
+			margin-bottom:0;
+		}
 		.img {
 			width: 100%;
 			@media (min-width: $screen-sm-min) {
