--- a/sass/gui/_benefits.scss
+++ b/sass/gui/_benefits.scss
@@ -2,18 +2,20 @@
   	[Benefits]
 ------------------------------------------------------------------*/
 
-.benefits {
-	.card {
+.benefitsSGE {
+	&-card {
 		background: $color-white;
 		padding: 20px;
 		margin: 10px;
 		display: flex;
-		flex-direction: column;
-		align-self: center;
-		text-align: center;
-		justify-content: center;
+		padding: 1.5vw;
+		align-items: center;
 		-webkit-box-shadow: -1px 1px 7px 8px rgba(0,0,0,0.01); 
 		box-shadow: -1px 1px 7px 8px rgba(0,0,0,0.01);
+		.card-element {
+			width: 85%;
+			margin-right: 20px;
+		}
 		.card-element,
 		.card-info {
 			@include translate3d(0, 0, 0);
@@ -36,11 +38,11 @@
 			box-shadow: -1px 1px 17px 18px rgba(0,0,0,0.01);
 			.card-element {
 				opacity: 100%;
-				@include translate3d(0, -40%, 0);
+				@include translate3d(0, -20%, 0);
 			}
 	
 			.card-info {
-				@include translate3d(0, -30%, 0);
+				@include translate3d(0, -10%, 0);
 			}
 		}
 	}
