--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -27,7 +27,7 @@
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
 @import 'gui/_benefits'; // Benefits
-@import 'gui/faq3'; // Faq3
+// @import 'gui/faq3'; // Faq3
 @import 'gui/faq5'; // Faq5
 @import 'gui/FAQ'; // FAQ
 
