--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -128,7 +128,7 @@
 
 		&:last-child {
 			.nav-item-child {
-                color: $color-beneficios-item;
+                color: $color-green;
                 font-weight: 800;
 			}
 		}
