--- a/sass/gui/_FAQ.scss
+++ b/sass/gui/_FAQ.scss
@@ -17,9 +17,9 @@
 	}
 	&-card {
 		display: flex;
-		align-items: end;
+		align-items: center;
 		.img {
-			@include size(3rem, auto);
+			@include size(3.5rem, auto);
 		}
 	}
 }
