--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -26,9 +26,9 @@
 @import 'gui/promo-section'; // Promo Section
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
-@import 'gui/_benefits'; // Benefits
+@import 'gui/_benefits'; // BenefitsSGE
 // @import 'gui/faq3'; // Faq3
-@import 'gui/faq5'; // Faq5
+@import 'gui/requirements'; // requirementsSGE
 @import 'gui/FAQ'; // FAQ
 
 // Layout
