--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -27,6 +27,7 @@
 @import 'gui/service'; // Service
 @import 'gui/work'; // Work
 @import 'gui/_benefits'; // BenefitsSGE
+@import 'gui/_benefitsIntegra'; // BenefitsIntegra
 // @import 'gui/faq3'; // Faq3
 @import 'gui/requirements'; // requirementsSGE
 @import 'gui/FAQ'; // FAQ
