--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -29,6 +29,8 @@
 @import 'gui/_benefits'; // BenefitsSGE
 @import 'gui/_benefitsIntegra'; // BenefitsIntegra
 // @import 'gui/faq3'; // Faq3
+@import 'gui/_whatUsedforIntegra'; // BenefitsSGE
+
 @import 'gui/requirements'; // requirementsSGE
 @import 'gui/FAQ'; // FAQ
 
