--- a/css/layout.css
+++ b/css/layout.css
@@ -674,6 +674,65 @@ fieldset[disabled] .btn-theme {
 }
 
 /*------------------------------------------------------------------
+  	[What used for]
+------------------------------------------------------------------*/
+@media (min-width: 768px) {
+  .what-used-for-integra .row {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.what-used-for-integra-card {
+  background: #fff;
+  margin: 10px;
+  display: flex;
+  padding: 1.5vw;
+  align-items: center;
+  -webkit-box-shadow: -1px 1px 7px 8px rgba(0, 0, 0, 0.01);
+  box-shadow: -1px 1px 7px 8px rgba(0, 0, 0, 0.01);
+}
+
+.what-used-for-integra-card .img-container {
+  width: 40%;
+  margin-right: 20px;
+}
+
+@media (min-width: 768px) {
+  .what-used-for-integra-card .img-container {
+    width: 70%;
+  }
+}
+
+.what-used-for-integra-card .img-container,
+.what-used-for-integra-card .card-info {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  transition-duration: 300ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+}
+
+.what-used-for-integra-card:hover {
+  -webkit-box-shadow: -1px 1px 17px 18px rgba(0, 0, 0, 0.01);
+  box-shadow: -1px 1px 17px 18px rgba(0, 0, 0, 0.01);
+}
+
+.what-used-for-integra-card:hover .img-container {
+  opacity: 100%;
+  -webkit-transform: translate3d(0, -20%, 0);
+  -moz-transform: translate3d(0, -20%, 0);
+  transform: translate3d(0, -20%, 0);
+}
+
+.what-used-for-integra-card:hover .card-info {
+  -webkit-transform: translate3d(0, -10%, 0);
+  -moz-transform: translate3d(0, -10%, 0);
+  transform: translate3d(0, -10%, 0);
+}
+
+/*------------------------------------------------------------------
   	[requirementsSGE]
 ------------------------------------------------------------------*/
 .requirementsSGE-card {
